--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "react-helmet-async": "^2.0.5",
+        "react-icons": "^5.5.0",
         "react-router-dom": "^7.1.1",
         "ts-node": "^10.9.2",
         "yup": "^1.6.1"
