--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
         "test": "jest --config jest.config.ts"
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
+        "@mui/lab": "^6.0.0-beta.28",
+        "@mui/material": "^6.4.5",
+        "@shadcn/ui": "^0.0.4",
         "formik": "^2.4.6",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
